; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_wcstombs.c_wcstombs_l.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/locale/extr_wcstombs.c_wcstombs_l.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 (i8*, i32**, i32, i64, i32*)* }

@wcstombs_l.initial = internal constant i32 0, align 4
@SIZE_T_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @wcstombs_l(i8* noalias %0, i32* noalias %1, i64 %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  store i8* %0, i8** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load i32, i32* %8, align 4
  %12 = call i32 @FIX_LOCALE(i32 %11)
  %13 = load i32, i32* @wcstombs_l.initial, align 4
  store i32 %13, i32* %9, align 4
  %14 = load i32*, i32** %6, align 8
  store i32* %14, i32** %10, align 8
  %15 = load i32, i32* %8, align 4
  %16 = call %struct.TYPE_2__* @XLOCALE_CTYPE(i32 %15)
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i64 (i8*, i32**, i32, i64, i32*)*, i64 (i8*, i32**, i32, i64, i32*)** %17, align 8
  %19 = load i8*, i8** %5, align 8
  %20 = load i32, i32* @SIZE_T_MAX, align 4
  %21 = load i64, i64* %7, align 8
  %22 = call i64 %18(i8* %19, i32** %10, i32 %20, i64 %21, i32* %9)
  ret i64 %22
}

declare dso_local i32 @FIX_LOCALE(i32) #1

declare dso_local %struct.TYPE_2__* @XLOCALE_CTYPE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
